# gh-rotator

./: .coveragerc  .gitconfig  .gitignore  .tt-config.json  CODEOWNERS  CONTRIBUTING.md  README.md  RESPONSIBLES  cspell.json  gh-rotator  gh_rotator.py  product-rotator.json  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.githooks/: pre-commit
.github/: ruleset_accept_to_main.json  rulset_acceot_to_main.json  rulset_accept_to_main.json
.github/instructions/: general.instructions.md
.github/workflows/: dispatch.yml  pre-deliver.yml  ready.yml  rotate-config.yml  rotate.yml  rotator.yml  wrapup.yml
classes/: productconfig.py  productmanifest.py
configurations/: config-dev-manifest.json  config-prod-manifest.json  config-qa-manifest.json
configurations/dev/: config-dev-manifest.json
configurations/prod/: config-prod-manifest.json
configurations/qa/: config-qa-manifest.json
docs/: ruleset_accept_to_main.json
gh_rotator/: __main__.py  gh_rotator.py
gh_rotator/classes/: lazyload.py  productconfig.py  productmanifest.py
gh_rotator/config/: config-rotator.json
gh_rotator/modules/: product_configuration.py  rotator_handlers.py  rotator_parser.py
gh_rotator/tests/: test_productconfig.py  test_productmanifest.py
gh_rotator/tests/data/: config-rotator-invalid.json  config-rotator-valid.json
samples/caller/.github/workflows/: create-prerelease.yml  (+1 more)
samples/product-repo/: config-rotator.json
tests/: test_productconfig.py  test_productmanifest.py  test_productrotator.py
tests/data/: product-rotator-invalid.json
(+12 files in other folders)
